// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSS/Layout FullBorderlessContainerOverride smoke-test 1`] = `
<div class="overflow-x-hidden">
  <div class="ui-standard-container mb-32">
    <div class="bg-[linear-gradient(to_right,cyan_49.9%,blue_50%,cyan_50.1%)] align-center p-32 ui-full-borderless-container-override text-white">
      <div class="text-center">
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`CSS/Layout FullContainerOverride smoke-test 1`] = `
<div class="overflow-x-hidden">
  <div class="ui-standard-container mb-32">
    <div class="bg-[linear-gradient(to_right,cyan_49.9%,blue_50%,cyan_50.1%)] align-center p-32 ui-full-container-override text-white">
      <div>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
        <span class="mx-8 rounded-lg bg-cool-black p-16">
          Content
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`CSS/Layout GridGap smoke-test 1`] = `
<div class="ui-standard-container mb-32">
  <div class="bg-mid-grey align-center p-32">
    <div class="grid grid-cols-4 ui-grid-gap">
      <div class="bg-cool-black text-white font-sans p-32 text-center">
        1
      </div>
      <div class="bg-cool-black text-white font-sans p-32 text-center">
        2
      </div>
      <div class="bg-cool-black text-white font-sans p-32 text-center">
        3
      </div>
      <div class="bg-cool-black text-white font-sans p-32 text-center">
        4
      </div>
    </div>
  </div>
</div>
`;

exports[`CSS/Layout GridMX smoke-test 1`] = `
<div class="ui-standard-container mb-32">
  <div class="bg-mid-grey align-center p-32">
    <div class="ui-grid-mx">
      <div class="bg-cool-black text-white font-sans p-32 text-center">
        Text
      </div>
    </div>
  </div>
</div>
`;

exports[`CSS/Layout GridPX smoke-test 1`] = `
<div class="ui-standard-container mb-32">
  <div class="bg-mid-grey align-center p-32">
    <div class="ui-grid-px">
      <div class="bg-cool-black text-white font-sans p-32 text-center">
        Text
      </div>
    </div>
  </div>
</div>
`;

exports[`CSS/Layout StandardContainer smoke-test 1`] = `
<div class="ui-standard-container mb-32">
  <div class="bg-mid-grey align-center p-32">
    <p class="ui-text-h3 text-center">
      ui-standard-container
    </p>
  </div>
</div>
`;
